Add some data files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 *~
 compiled/
+software-construction-admin/test-validation/test-validation-jobs.rktd
+software-construction-admin/grading/grading-jobs.rktd
