admin: Normalize tests to strip `.0+`s during validation
Both in the CI and when copying validated tests

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 compiled/
 software-construction-admin/test-validation/test-validation-jobs.rktd
 software-construction-admin/grading/grading-jobs.rktd
+backgammon-oracle/submitted-tests/0/
+backgammon-oracle/validated-tests/0/
