get 2.1 and 2.3 going

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ software-construction-admin/test-validation/test-validation-jobs.rktd
 software-construction-admin/grading/grading-jobs.rktd
 backgammon-oracle/submitted-tests/0/
 backgammon-oracle/validated-tests/0/
+.DS_Store
